--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -68,6 +68,12 @@ a {
   &:hover {
     color: var(--primary-hover);
   }
+
+  &:focus-visible {
+    outline: 2px solid var(--primary);
+    outline-offset: 2px;
+    border-radius: 2px;
+  }
 }
 
 // Headings
