Fix Jekyll build error: Handle Integer tags in slugify filter
- Add to_string filter before slugify in post.html layout to handle Integer tags
- Quote numeric tag '2026' in tags array to prevent YAML Integer parsing
- Fixes 'undefined method gsub for an instance of Integer' error in Jekyll build

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,7 +60,7 @@ layout: default
     {% if page.tags.size > 0 %}
     <div class="post-tags">
       {% for tag in page.tags %}
-      <a href="{{ '/tags/' | relative_url }}#{{ tag | slugify }}" class="tag">{{ tag }}</a>
+      <a href="{{ '/tags/' | relative_url }}#{{ tag | to_string | slugify }}" class="tag">{{ tag }}</a>
       {% endfor %}
     </div>
     {% endif %}
